spacing fix

--- a/src/styles/ChatRoom.css
+++ b/src/styles/ChatRoom.css
@@ -220,6 +220,7 @@ span.message-text {
     justify-content: left;
     justify-items: left;
     text-align: left;
+    gap: 0.2rem;
 }
 
 span.username.centered-system {
